<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MiPerfilFragment">

    <!-- Toolbar -->

    <!-- Título -->

    <!-- Línea divisora -->

    <!-- Contenedor para foto y datos -->

    <TextView
        android:id="@+id/txt_miperfil_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/mi_perfil_titulo"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_miperfil_titulo" />

    <!-- Botón de Cerrar Sesión -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="413dp"
        android:layout_height="654dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cerrar_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_divider"
        app:layout_constraintVertical_bias="0.0">

        <!-- Foto de perfil -->

        <!-- Contenedor para los datos -->

        <ImageView
            android:id="@+id/img_perfil"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="10dp"
            android:cropToPadding="false"
            android:src="@mipmap/perfil"
            app:layout_constraintBottom_toTopOf="@+id/layout_datos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.111" />

        <LinearLayout
            android:id="@+id/layout_datos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="168dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_nombre_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_nacionalidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nacionalidad"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_fecha_nacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_nacimiento"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edad"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_provincia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/provincia"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_localidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/localidad"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_usuario"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_modificar_intereses"
            android:layout_width="240dp"
            android:layout_height="49dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#00BCD4"
            android:text="@string/modificar_intereses"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_datos" />

        <Button
            android:id="@+id/btn_cerrar_sesion"
            android:layout_width="238dp"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="#FF5757"
            android:text="@string/cerrar_sesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_modificar_intereses" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
