<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".InteresesActivity">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_toolbar_container"
            android:name="com.example.tpint_grupo2.FragmentBarraSuperior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_intro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/intereses_bienvenida"
            android:textAlignment="center"
            android:textColor="#000000"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_toolbar_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_dias_disponibles"
            android:layout_width="375dp"
            android:layout_height="35dp"
            android:background="#E4E4A1"
            android:padding="8dp"
            android:text="@string/dias_disponibles"
            android:textAlignment="center"
            android:textColor="#666600"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_intro" />

        <GridLayout
            android:id="@+id/dias_disponibles_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:padding="8dp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/text_dias_disponibles"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:text="@string/lunes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="4dp"/>

        <CheckBox
            android:text="@string/martes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="4dp"/>

        <CheckBox
            android:text="@string/miercoles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="4dp"/>

        <CheckBox
            android:text="@string/jueves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="4dp"/>

        <CheckBox
            android:text="@string/viernes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="4dp"/>

        <CheckBox
            android:text="@string/sabado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="4dp"/>

        <CheckBox
            android:text="@string/domingo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="4dp"/>
    </GridLayout>


        <TextView
            android:id="@+id/text_franja_horaria"
            android:layout_width="375dp"
            android:layout_height="35dp"
            android:background="#E4E4A1"
            android:padding="8dp"
            android:text="@string/franja_horaria_disponible"
            android:textAlignment="center"
            android:textColor="#666600"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dias_disponibles_group" />

        <LinearLayout
            android:id="@+id/tiempo_disponible_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_franja_horaria"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center">

            <TextView
                android:text="Desde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:gravity="center_vertical"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/button_timepicker_desde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seleccionar" />

            <TextView
                android:text="Hasta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                android:gravity="center_vertical"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/button_timepicker_hasta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seleccionar" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_actividades_preferidas"
            android:layout_width="375dp"
            android:layout_height="35dp"
            android:background="#E4E4A1"
            android:padding="8dp"
            android:text="@string/actividades_preferidas_noejemplo"
            android:textAlignment="center"
            android:textColor="#666600"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiempo_disponible_group" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_actividades"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_actividades_preferidas" />

        <TextView
            android:id="@+id/text_zona"
            android:layout_width="375dp"
            android:layout_height="35dp"
            android:background="#E4E4A1"
            android:padding="8dp"
            android:text="@string/zona"
            android:textAlignment="center"
            android:textColor="#666600"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_actividades" />

        <LinearLayout
            android:id="@+id/zona_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/text_zona"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp">

            <Spinner
                android:id="@+id/spinner_provincia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner_localidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_agregar_zona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mas"
                android:textSize="18sp"
                android:background="@android:color/transparent"
                android:textColor="#02AF01" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/zona_seleccionada_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/zona_group"/>

        <TextView
            android:id="@+id/text_transporte"
            android:layout_width="375dp"
            android:layout_height="35dp"
            android:background="#E4E4A1"
            android:padding="8dp"
            android:text="@string/cuenta_con_transporte_propio"
            android:textAlignment="center"
            android:textColor="#666600"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zona_seleccionada_container" />

        <RadioGroup
            android:id="@+id/transporte_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_transporte"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radio_si"
                android:text="@string/si"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radio_no"
                android:text="@string/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_confirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="#02AE01"
            android:text="@string/iniciar"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transporte_group"
            app:layout_constraintVertical_bias="0.571"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>