<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentPerfilAdministrador">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FragmentPerfilAdministrador">

        <TextView
            android:id="@+id/txt_miperfil_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/mi_perfil_titulo"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_miperfil_titulo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="108dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_cerrar_sesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_divider"
            app:layout_constraintVertical_bias="1.0">

            <!-- Foto de perfil -->
            <ImageView
                android:id="@+id/img_perfil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="89dp"
                android:cropToPadding="false"
                android:src="@mipmap/perfil"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/layout_datos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Contenedor para los datos -->
            <LinearLayout
                android:id="@+id/layout_datos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_perfil"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txt_nombre_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nombre Administrador"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_nacionalidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nacionalidad"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_sexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_fecha_nacimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="16/09/1997"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_edad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="27"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_provincia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/provincia"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_localidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/localidad"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_direccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Calle 1234"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_telefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4489423"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="correo@correo.com"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_cerrar_sesion"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:backgroundTint="#FF5757"
            android:text="@string/cerrar_sesion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>